Closed Bug 92348 Opened 23 years ago Closed 23 years ago

can't start mozilla with the same profile after crash

Categories

(Core :: Networking: Cache, defect)

x86
Windows NT
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: charlesccli, Assigned: gordon)

References

Details

(Keywords: crash, Whiteboard: PDT+ [verified on branch] checklinux checkmac)

Attachments

(3 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:0.9.1) Gecko/20010607 Netscape6/6.1b1 BuildID: 20010723 I can't start Mozilla 9.2 with the same profile after crash. I have to recreate another profile through the profile manager to start mozilla. Reproducible: Sometimes Steps to Reproduce: 1. Start mozilla 2. Try to crash mozilla... I used the exit button(the cross) at the right upper corner once. 3. restart mozilla use the same user profile Actual Results: Mozilla broser doesn't show up. thought it appears in the task manager. I have to recreate a new profile though the profile manager to start Mozilla Expected Results: Well... I want Mozilla to show up.
*** Bug 92349 has been marked as a duplicate of this bug. ***
1. is that only 0.9.2 or also with build 20010723 ? 2. Are you using the -turbo option ? 3. You wrote:"I used the exit button(the cross) at the right upper corner once." Dou you mean you crash if you use the "x" ? 4. Have you installed Mozilla in a fresh directory ? (not over an older build ?) 5. Have you the writer permisssion for your profile directory ? 6. After a crash have you tried to logoff/logon and try it again ? (file locking problem)
Severity: blocker → critical
Keywords: crash
sounds like something in the profile is messed up. What did you do to cause the crash? Did you make copies of bookmarks many times? (weird question I know, but I've seen this after doing that before)?
Here is one way to reproduce the buy on Mozilla 20010726 1) Create a new profile by profile manager 2) change to Memory and disk cache to 0 (I did this by Edit-> perfencece->advance -> cache and set the value = 0) 3) exit the mozilla (if this doesn't reproduce the bug, try use task manager and kill mozilla) 4) restart mozilla with the same profile. nothing shows up. However, the same profile works for Netscape 6.1
you should never use the same profile with ns6.x and mozilla by the way...
This sounds like : Networking:Cache gordon: Is this a known cache problem ?
Assignee: asa → gordon
Component: Browser-General → Networking: Cache
QA Contact: doronr → tever
Does anyone know if QuickLaunch (indicated by pref, icon in systray) is involved? This can also be triggered by the -turbo command line switch.
Blocks: 75599
If both the disk and memory caches are disabled we still return a cache entry descriptor when a client calls OpenCacheEntry(), because we lazily bind an entry to a specific device. If neither device is enabled, we fail when operations are performed on the descriptor which would cause it to be bound to a device. The imgLib code is ignoring some of these errors. I think it would make more sense to fail earlier, and not return a cache entry descriptor if we have no cache devices enabled. Adding this one line accomplishes that and enables the browser to come up: if (!mEnableDiskDevice && !mEnableMemoryDevice) return NS_ERROR_FAILURE;
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pav, Gagan, I'm looking for an r=. Darin, I need an sr=. I also think we should fix this on the branch. Nominating for nsbranch. Gagan, how about a +?
Keywords: nsbranch, patch
Comment on attachment 49957 [details] [diff] [review] Added check for stream based cache entries. r=gagan
Attachment #49957 - Flags: review+
this allows us to restart the browser after setting disk/mem size to zero, without problems! so approving for branch
Keywords: nsbranchnsbranch+
good catch gordon. sr=me.
Comment on attachment 49963 [details] [diff] [review] Corrected logic for non-stream-based check. sr=darin (are there other entry points that need to be similarly protected?)
Attachment #49963 - Flags: superreview+
No, the creation of all descriptors goes through nsCacheService::ActivateEntry(), unless the cache entry is already active.
The patch has been checked into the trunk. Leaving bug open in hopes of getting PDT approval tomorrow to land on the branch.
Pls come to PDT @ 3:30 today to talk about this one.
check it in tomorrow afternoon, after we get some testing on the trunk - PDT+. Pls spam people to make sure people test it out.
Whiteboard: PDT+
Fix checked into branch. Marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
set mem and disk cache to 0, killed moz, restarted fine. verified on branch only: WinNT 2001-09-24-05-0.9.4
Keywords: vtrunk
Whiteboard: PDT+ → PDT+ [verified on branch]
No longer blocks: 75599
Blocks: 75599
.capacity=0 should shut the specific cache service off (making it not show up in about:config). VERIFIED: Mach-O, mozilla 1.4b
QA Contact: tever → cacheqa
Whiteboard: PDT+ [verified on branch] → PDT+ [verified on branch] checklinux checkmac
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: