Fix bug 92348, browser won't start if cache capacities set to 0. Added check to fail nsCacheService::ActivateEntry() if neither disk or memory cache devices are enabled, or if the memory cache device is not enabled and the request if for a non-stream-based entry. r=gagan, sr=dougt.

Also changing pref name for cache parent directory according to suggestion
in bug 78480.  r=gagan, sr=darin.